# InternProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-kits.json  settings.json
Core/Inc/: ds3231.h  main.h  pins.h  ring_buffer.h  stm32f0xx_it.h  uart_ring.h  user_assert.h
Core/Src/: ds3231.c  main.c  ring_buffer.c  stm32f0xx_it.c  uart_ring.c  user_assert.c
Core/Startup/: startup_stm32f051r8tx.s
Doc/: Doxyfile
Doc/html/: annotated.html  annotated_dup.js  classes.html  dir_16bcd26042ca5e02e0801c4b8ea0b425.html  dir_25449c14824cca673ceb9feac66975fe.html  dir_416fbff2ab715422922832900323e6d5.html  dir_60925fc218da8ca7908795bf5f624060.html  dir_7b05109297cab176a390ab0b97b4eddc.html  dir_863f1a9b262748bc5f9e7769e71e3a55.html  dir_a4bafac6521fbf3f0a18d2926ca65f10.html  dir_a79ff8dcc03218f07eb7b3358651ad9e.html  dir_b596f468b52957496e4f78b80e029268.html  dir_c6310732a22f63c0c2fc5595561e68f1.html  dir_d09df2af359c80dbd4512f3fe7207fe9.html  dir_d6a437c19a30ac5bd2c653d6ef7d9a77.html  dir_e2489e887f17afa3cbc07a4ec152cdd2.html  ds3231_8h_source.html  functions.html  functions_vars.html  group___assert___exported___function.js  group___assert___exported___macros.html  group___assert___exported___types.html  group___assert___exported___types.js  group___assert___exported___types_struct_assert_info__t.js  group___assert___exported___variables.html  group___assert___exported___variables.js  group___assert___private___types.html  group___assert___private___types.js  group___assert___private___variables.html  group___assert___private___variables.js  group___asserts.html  group___asserts.js  group___core.html  group___core.js  group___d_s3231___driver.js  group___d_s3231___exported___function.html  group___d_s3231___exported___function.js  group___d_s3231___exported___types.js  group___d_s3231___exported___types_struct_d_s3231___control__t.js  group___d_s3231___exported___types_struct_d_s3231___date__t.js  (+104 more)
Doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  (+26 more)
Drivers/DS3231/: ds3231.c  ds3231.h
Drivers/STM32F051/Inc/: stm32f051_gpio.h  stm32f051_i2c.h  stm32f051_uart.h
Drivers/STM32F051/Src/: stm32f051_gpio.c  stm32f051_i2c.c  stm32f051_rcc.c  stm32f051_uart.c
Drivers/STM32F051_Driver/Inc/: stm32f051_dma.h  stm32f051_gpio.h  stm32f051_i2c.h  stm32f051_rcc.h  stm32f051_uart.h
Drivers/STM32F051_Driver/Src/: stm32f051_dma.c  stm32f051_gpio.c  stm32f051_i2c.c  stm32f051_rcc.c  stm32f051_uart.c
Src/Assert/: user_assert.c  user_assert.h
Src/Core/: FreeRTOSConfig.h  FreeRTOSInit.c  FreeRTOSInit.h  main.c  main.h  pins.h  ring_buffer.c  ring_buffer.h  stm32f0xx_it.c  stm32f0xx_it.h  uart.c  uart.h  uart_ring.c  uart_ring.h
Src/Drivers/DS3231/: ds3231.c  ds3231.h
Src/Drivers/STM32F051/: stm32f051_dma.c  stm32f051_gpio.c  stm32f051_gpio.h  stm32f051_i2c.c  stm32f051_i2c.h  stm32f051_rcc.h  stm32f051_uart.c  stm32f051_uart.h
Src/parser/: esp8266.cpp  esp8266.h  esp8266.hpp
doc/html/: _parser_8hpp_source.html  annotated.html  annotated_dup.js  class_parser.html  class_parser_1_1_a_t___command.html  class_parser_1_1_a_t___command.js  classfunction_3_01_return_07_args_01_8_8_8_08_4.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8c4dbbd7e85af41b2bc88c023aa70b58.html  dir_ae30debb953a35e6fc90c58b03340eb3.html  dir_b0668c78f58972949bfd533f76d8ed19.html  functions.html  functions_func.html  functions_type.html  group___a_t___parser.html  group___a_t___parser.js  group___assert___exported___macros.html  group___assert___exported___macros.js  group___assert___private___types.html  group___asserts.html  group___d_s3231___driver.html  group___g_p_i_o.js  group___i2_c.html  group___main___exported___variable.html  group___main___private___macros.js  group___r_c_c___exported___function.html  group___r_c_c___private___variables.html  group___ring_buff___exported___function.js  group___ring_buff___exported___types.html  group___u_a_r_t.html  group___u_a_r_t___call_back___function.js  group___u_a_r_t___exported___function.js  group___u_a_r_t___ini.html  group___u_a_r_t___ini.js  group___u_a_r_t___private___function.html  group___u_a_r_t___private___function.js  group___u_a_r_t___ring.js  group___u_a_r_t___ring___exported___functions.html  group___u_a_r_t___ring___exported___functions.js  group___u_a_r_t___ring___exported___macros.html  (+23 more)
doc/html/search/: all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  groups_2.js  (+21 more)
doc111/html/: class_parser.js  classfunction.html  classfunction_3_01_return_07_args_01_8_8_8_08_4.html  dir_413f4e031a85da0d68269c6fd2f76e1c.html  dir_6cd8491d143eb218b70983dbdb3c58bc.html  function_8hpp_source.html  functions_vars.html  group___assert___exported___function.html  group___d_s3231___exported___types.html  group___drivers.html  group___g_p_i_o___exported___types.js  group___i_r_q___handlers.js  group___main___private___macros.html  group___r_c_c___private___variables.js  group___ring___buff.js  group___u_a_r_t___call_back___function.html  group___u_a_r_t___ring.html  main_8h_source.html  modules.html  navtreedata.js  struct_d_s3231___mem___time__t.js  struct_d_s3231___status__t.js  struct_d_s3231___temp__t.js
src/assert/: user_assert.h
src/core/: FreeRTOSConfig.h  main.c  main.h  ring_buffer.h  stm32f0xx_it.c  uart_ring.c  uart_ring.h
src/parser/: CMakeLists.txt
src111/parser/: esp8266.cpp  esp8266.hpp
tests/: CMakeLists.txt
tests/src/: RunAllTests.cpp
tests/src/RingBuffer/: RingBufferTests.cpp
(+27 files in other folders)
